--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Wallet</title>
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/skeleton.css">
     <style>
     #root {
         width: 100%;
@@ -12,6 +14,11 @@
         margin: 0;
         width: 100%;
         height: 100%;
+        font-size: 1.5rem
+    }
+    td {
+        text-align: center;
+        vertical-align: middle;
     }
     </style>
   </head>
