download/upload csv data by id/name

--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
     <div id='root'>
     </div>
     <script src="/static/bundle.js"></script>
+    <script async defer src="https://apis.google.com/js/api.js"
+      onload="this.onload=function(){};"
+      onreadystatechange="if (this.readyState === 'complete') this.onload()">
+    </script>
   </body>
 </html>
