--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <div id='root'>
     </div>
-    <script src="/static/bundle.js"></script>
+    <script src="static/bundle.js"></script>
     <script async defer src="https://apis.google.com/js/api.js"
       onload="this.onload=function(){};"
       onreadystatechange="if (this.readyState === 'complete') this.onload()">
